--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
         </nav>
     </header>
 
-    
+    <div class="Banner">
+        <h1 class="Banner-Title fw-r">Blog Afrianska</h1>
+        <p class="Banner-Text fw-l">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum corporis eaque obcaecati ea! Tenetur?</p>
+    </div>
+
+    <input type="text" placeholder="Search.." class="Search">
+
+
     
 </body>
 </html>
