--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hackaton semana 7</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
     <link rel="stylesheet" href="./styles.css">
+
 </head>
 <body>
 
-    <header class="Header">
+    <header class="Header container">
         <img src="https://assets.stickpng.com/thumbs/5847f9cbcef1014c0b5e48c8.png" alt="" class="Header-Logo">
         <nav class="Header-Menu">
             <ul class="Header-ListItem">
@@ -31,9 +34,19 @@
         <p class="Banner-Text fw-l">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus illum corporis eaque obcaecati ea! Tenetur?</p>
     </div>
 
-    <input type="text" placeholder="Search.." class="Search">
+    <div class="Search container">
+        <div class="Search-Container row">
+            <div class="Search-Input col s12">
+                <input placeholder="Search..">
+            </div>  
+        </div>
+    </div>
 
 
-    
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </body>
 </html>
