--- a/index.html
+++ b/index.html
@@ -35,12 +35,110 @@
     </div>
 
     <div class="Search container">
-        <div class="Search-Container row">
+        <div class="Search-Container row"></div>
             <div class="Search-Input col s12">
                 <input placeholder="Search..">
             </div>  
         </div>
     </div>
+
+    <main class="Main container">
+        <div class="Main-Title row">
+            <h2 class="Main-Title-Text fw-r col m12">POPULAR</h2>
+        </div>
+
+        <div class="Main-Art1 row">
+            <div class="Main-Art1-Info col m4">
+                    <h1 class="Main-Art1-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                    <p class="Main-Art1-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
+                    <div class="Main-Art1-Social">
+                        <div class="Main-Art1-Personal">
+                            <h3 class="Main-Art1-Personal-Name name-color">Samantha Leuthex</h3>
+                            <p class="Main-Art1-Personal-Date date-color">May 5, 3min read</p>
+                        </div>
+                        <div class="Main-Art1-Icons">
+                            <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
+                            <a href=""><img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_location_on_48px-512.png" alt=""></a>
+                        </div>
+                    </div>
+            </div>
+            <img class="col m8" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+        </div>
+
+        <div class="Main-Art2 row">
+            <div class="Main-Art2-Card col m4">
+                <img class="col m12" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+
+                <div class="Main-Art2-Card-Info col m12">
+                        <h1 class="Main-Art2-Card-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <p class="Main-Art2-Card-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
+                        <div class="Main-Art2-Card-Social">
+                            <div class="Main-Art2-Card-Personal">
+                                <h3 class="Main-Art2-Card-Personal-Name name-color">Samantha Leuthex</h3>
+                                <p class="Main-Art2-Card-Personal-Date date-color">May 5, 3min read</p>
+                            </div>
+                            <div class="Main-Art2-Card-Icons">
+                                <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
+                                <a href=""><img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_location_on_48px-512.png" alt=""></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="Main-Art2-Card col m4">
+                <img class="col m12" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+
+                <div class="Main-Art2-Card-Info col m12">
+                        <h1 class="Main-Art2-Card-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <p class="Main-Art2-Card-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
+                        <div class="Main-Art2-Card-Social">
+                            <div class="Main-Art2-Card-Personal">
+                                <h3 class="Main-Art2-Card-Personal-Name name-color">Samantha Leuthex</h3>
+                                <p class="Main-Art2-Card-Personal-Date date-color">May 5, 3min read</p>
+                            </div>
+                            <div class="Main-Art2-Card-Icons">
+                                <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
+                                <a href=""><img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_location_on_48px-512.png" alt=""></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="Main-Art2-Card col m4">
+                <img class="Main-Art2-Card-Img col m12" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+
+                <div class="Main-Art2-Card-Info col m12">
+                        <h1 class="Main-Art2-Card-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <p class="Main-Art2-Card-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
+                        <div class="Main-Art2-Card-Social">
+                            <div class="Main-Art2-Card-Personal">
+                                <h3 class="Main-Art2-Card-Personal-Name name-color">Samantha Leuthex</h3>
+                                <p class="Main-Art2-Card-Personal-Date date-color">May 5, 3min read</p>
+                            </div>
+                            <div class="Main-Art2-Card-Icons">
+                                <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
+                                <a href=""><img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_location_on_48px-512.png" alt=""></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+
+        
+
+        <div class="row">
+            <div class="articulos col m12 s12 xl12">
+                <p class="right">SEE ALL POPULAR ARTICLES</p>
+            </div>
+        </div>
+        
+
+        <div class="row">
+            <div class="all-articles col m12 s12 xl12">
+                <p class="left">ALL ARTICLES</p>
+            </div>
+        </div>
+    </main>
 
 
 
