--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
 
         
 
-        <div class="row">
-            <div class="articulos col m12 s12 xl12">
-                <p class="right">SEE ALL POPULAR ARTICLES</p>
+        <div class="Popular row">
+            <div class="Popular-Cont col m12 s12 xl12">
+                <p class="Popular-Text right">SEE ALL POPULAR ARTICLES</p>
             </div>
         </div>
         
 
-        <div class="row">
-            <div class="all-articles col m12 s12 xl12">
-                <p class="left">ALL ARTICLES</p>
+        <div class="All row">
+            <div class="All-Cont col m12 s12 xl12">
+                <p class="All-Text left">ALL ARTICLES</p>
             </div>
         </div>
     </main>
