--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="Main-Art1 row">
             <div class="Main-Art1-Info col m4">
-                    <h1 class="Main-Art1-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                    <h1 class="Main-Art1-Title title-color">Lorem ipsum dolor sit amet consectetur.</h1>
                     <p class="Main-Art1-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
                     <div class="Main-Art1-Social">
                         <div class="Main-Art1-Personal">
@@ -70,7 +70,7 @@
                 <img class="col m12" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
 
                 <div class="Main-Art2-Card-Info col m12">
-                        <h1 class="Main-Art2-Card-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <h1 class="Main-Art2-Card-Title title-color">Lorem ipsum dolor sit amet consectetur.</h1>
                         <p class="Main-Art2-Card-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
                         <div class="Main-Art2-Card-Social">
                             <div class="Main-Art2-Card-Personal">
@@ -89,7 +89,7 @@
                 <img class="col m12" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
 
                 <div class="Main-Art2-Card-Info col m12">
-                        <h1 class="Main-Art2-Card-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <h1 class="Main-Art2-Card-Title title-color">Lorem ipsum dolor sit amet consectetur.</h1>
                         <p class="Main-Art2-Card-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
                         <div class="Main-Art2-Card-Social">
                             <div class="Main-Art2-Card-Personal">
@@ -108,7 +108,7 @@
                 <img class="Main-Art2-Card-Img col m12" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
 
                 <div class="Main-Art2-Card-Info col m12">
-                        <h1 class="Main-Art2-Card-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <h1 class="Main-Art2-Card-Title title-color">Lorem ipsum dolor sit amet consectetur.</h1>
                         <p class="Main-Art2-Card-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
                         <div class="Main-Art2-Card-Social">
                             <div class="Main-Art2-Card-Personal">
@@ -139,6 +139,86 @@
             </div>
         </div>
     </main>
+
+    <article class="Article">
+        <div class="Article-Container container">
+            <div class="Article-Card row">
+                <img class="Article-Card-Img col m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+
+                <div class="Article-Info col m8">
+                        <h1 class="Article-Info-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <p class="Article-Info-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
+                        <div class="Article-Info-Social">
+                            <div class="Article-Info-Social-Personal">
+                                <h3 class="Article-Info-Social-Personal-Name name-color">Samantha Leuthex</h3>
+                                <p class="Article-Info-Social-Personal-Date date-color">May 5, 3min read</p>
+                            </div>
+                            <div class="Article-Info-Social-Icons">
+                                <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
+                                <a href=""><img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_location_on_48px-512.png" alt=""></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="Article-Card row">
+                <img class="Article-Card-Img col m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+
+                <div class="Article-Info col m8">
+                        <h1 class="Article-Info-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <p class="Article-Info-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
+                        <div class="Article-Info-Social">
+                            <div class="Article-Info-Social-Personal">
+                                <h3 class="Article-Info-Social-Personal-Name name-color">Samantha Leuthex</h3>
+                                <p class="Article-Info-Social-Personal-Date date-color">May 5, 3min read</p>
+                            </div>
+                            <div class="Article-Info-Social-Icons">
+                                <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
+                                <a href=""><img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_location_on_48px-512.png" alt=""></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="Article-Card row">
+                <img class="Article-Card-Img col m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+
+                <div class="Article-Info col m8">
+                        <h1 class="Article-Info-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <p class="Article-Info-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
+                        <div class="Article-Info-Social">
+                            <div class="Article-Info-Social-Personal">
+                                <h3 class="Article-Info-Social-Personal-Name name-color">Samantha Leuthex</h3>
+                                <p class="Article-Info-Social-Personal-Date date-color">May 5, 3min read</p>
+                            </div>
+                            <div class="Article-Info-Social-Icons">
+                                <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
+                                <a href=""><img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_location_on_48px-512.png" alt=""></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+
+            <div class="Article-Card row">
+                <img class="Article-Card-Img col m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+
+                <div class="Article-Info col m8">
+                        <h1 class="Article-Info-Title">Lorem ipsum dolor sit amet consectetur.</h1>
+                        <p class="Article-Info-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
+                        <div class="Article-Info-Social">
+                            <div class="Article-Info-Social-Personal">
+                                <h3 class="Article-Info-Social-Personal-Name name-color">Samantha Leuthex</h3>
+                                <p class="Article-Info-Social-Personal-Date date-color">May 5, 3min read</p>
+                            </div>
+                            <div class="Article-Info-Social-Icons">
+                                <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
+                                <a href=""><img src="https://cdn3.iconfinder.com/data/icons/google-material-design-icons/48/ic_location_on_48px-512.png" alt=""></a>
+                            </div>
+                        </div>
+                </div>
+            </div>
+        </div>
+    </article>
 
 
 
