agregado estilos a titulos

--- a/index.html
+++ b/index.html
@@ -217,6 +217,17 @@
                         </div>
                 </div>
             </div>
+
+            <div class="manejadores col s12 xl12">
+                <div class="old">
+                    <p class="left">Old Post</p>
+                </div>
+
+                <div class="new">
+                    <p class="right">New Post</p>
+                </div>
+                
+            </div>
         </div>
     </article>
 
