--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="Main-Art1-Social">
                         <div class="Main-Art1-Personal">
                             <h3 class="Main-Art1-Personal-Name name-color">Samantha Leuthex</h3>
-                            <p class="Main-Art1-Personal-Date date-color">May 5, 3min read</p>
+                            <p class="Main-Art1-Personal-Date date-color p-color">May 5, 3min read</p>
                         </div>
                         <div class="Main-Art1-Icons">
                             <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
@@ -75,7 +75,7 @@
                         <div class="Main-Art2-Card-Social">
                             <div class="Main-Art2-Card-Personal">
                                 <h3 class="Main-Art2-Card-Personal-Name name-color">Samantha Leuthex</h3>
-                                <p class="Main-Art2-Card-Personal-Date date-color">May 5, 3min read</p>
+                                <p class="Main-Art2-Card-Personal-Date date-color p-color">May 5, 3min read</p>
                             </div>
                             <div class="Main-Art2-Card-Icons">
                                 <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
@@ -94,7 +94,7 @@
                         <div class="Main-Art2-Card-Social">
                             <div class="Main-Art2-Card-Personal">
                                 <h3 class="Main-Art2-Card-Personal-Name name-color">Samantha Leuthex</h3>
-                                <p class="Main-Art2-Card-Personal-Date date-color">May 5, 3min read</p>
+                                <p class="Main-Art2-Card-Personal-Date date-color p-color">May 5, 3min read</p>
                             </div>
                             <div class="Main-Art2-Card-Icons">
                                 <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
@@ -113,7 +113,7 @@
                         <div class="Main-Art2-Card-Social">
                             <div class="Main-Art2-Card-Personal">
                                 <h3 class="Main-Art2-Card-Personal-Name name-color">Samantha Leuthex</h3>
-                                <p class="Main-Art2-Card-Personal-Date date-color">May 5, 3min read</p>
+                                <p class="Main-Art2-Card-Personal-Date date-color p-color">May 5, 3min read</p>
                             </div>
                             <div class="Main-Art2-Card-Icons">
                                 <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
@@ -151,7 +151,7 @@
                         <div class="Article-Info-Social">
                             <div class="Article-Info-Social-Personal">
                                 <h3 class="Article-Info-Social-Personal-Name name-color">Samantha Leuthex</h3>
-                                <p class="Article-Info-Social-Personal-Date date-color">May 5, 3min read</p>
+                                <p class="Article-Info-Social-Personal-Date date-color p-color">May 5, 3min read</p>
                             </div>
                             <div class="Article-Info-Social-Icons">
                                 <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
@@ -170,7 +170,7 @@
                         <div class="Article-Info-Social">
                             <div class="Article-Info-Social-Personal">
                                 <h3 class="Article-Info-Social-Personal-Name name-color">Samantha Leuthex</h3>
-                                <p class="Article-Info-Social-Personal-Date date-color">May 5, 3min read</p>
+                                <p class="Article-Info-Social-Personal-Date date-color p-color">May 5, 3min read</p>
                             </div>
                             <div class="Article-Info-Social-Icons">
                                 <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
@@ -189,7 +189,7 @@
                         <div class="Article-Info-Social">
                             <div class="Article-Info-Social-Personal">
                                 <h3 class="Article-Info-Social-Personal-Name name-color">Samantha Leuthex</h3>
-                                <p class="Article-Info-Social-Personal-Date date-color">May 5, 3min read</p>
+                                <p class="Article-Info-Social-Personal-Date date-color p-color">May 5, 3min read</p>
                             </div>
                             <div class="Article-Info-Social-Icons">
                                 <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
@@ -208,7 +208,7 @@
                         <div class="Article-Info-Social">
                             <div class="Article-Info-Social-Personal">
                                 <h3 class="Article-Info-Social-Personal-Name name-color">Samantha Leuthex</h3>
-                                <p class="Article-Info-Social-Personal-Date date-color">May 5, 3min read</p>
+                                <p class="Article-Info-Social-Personal-Date date-color p-color">May 5, 3min read</p>
                             </div>
                             <div class="Article-Info-Social-Icons">
                                 <a href=""><img src="https://cdn2.iconfinder.com/data/icons/font-awesome/1792/search-512.png" alt=""></a>
@@ -220,16 +220,68 @@
 
             <div class="manejadores col s12 xl12">
                 <div class="old">
-                    <p class="left">Old Post</p>
+                    <p class="left title-color p-color">Old Post</p>
                 </div>
 
                 <div class="new">
-                    <p class="right">New Post</p>
+                    <p class="right title-color p-color">New Post</p>
                 </div>
                 
             </div>
         </div>
     </article>
+
+    <footer class="page-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col l6 s12 m6 xl6 ">
+              <h5 class="white-text">Footer Content</h5>
+              <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+            </div>
+            <div class="boton-footer col l4 offset-l2 s12 m6 xl6 center valign ">
+                <button>SOY UN BOTON</button>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+            <div class="row">
+              
+              <div class="col l4 offset-4 s12 m4 center">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+              <div class="col l4 offset-4 s12 m4 center">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+              <div class="col l4 offset-4 s12 m4 center">
+                <h5 class="white-text">Links</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        <div class="footer-copyright">
+          <div class="container">
+          © 2014 Copyright Text
+          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+          </div>
+        </div>
+      </footer>
 
 
 
