avance final arreglos mobile

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
     <article class="Article">
         <div class="Article-Container container">
             <div class="Article-Card row">
-                <img class="Article-Card-Img col m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+                <img class="Article-Card-Img col s12 m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
 
-                <div class="Article-Info col m8">
+                <div class="Article-Info col s12 m8">
                         <h1 class="Article-Info-Title">Lorem ipsum dolor sit amet consectetur.</h1>
                         <p class="Article-Info-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
                         <div class="Article-Info-Social">
@@ -162,9 +162,9 @@
             </div>
 
             <div class="Article-Card row">
-                <img class="Article-Card-Img col m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+                <img class="Article-Card-Img col s12 m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
 
-                <div class="Article-Info col m8">
+                <div class="Article-Info col s12 m8">
                         <h1 class="Article-Info-Title">Lorem ipsum dolor sit amet consectetur.</h1>
                         <p class="Article-Info-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
                         <div class="Article-Info-Social">
@@ -181,9 +181,9 @@
             </div>
 
             <div class="Article-Card row">
-                <img class="Article-Card-Img col m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+                <img class="Article-Card-Img col s12 m4 hide-on-small-only" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
 
-                <div class="Article-Info col m8">
+                <div class="Article-Info col s12 m8 hide-on-small-only">
                         <h1 class="Article-Info-Title">Lorem ipsum dolor sit amet consectetur.</h1>
                         <p class="Article-Info-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
                         <div class="Article-Info-Social">
@@ -200,9 +200,9 @@
             </div>
 
             <div class="Article-Card row">
-                <img class="Article-Card-Img col m4" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
+                <img class="Article-Card-Img col s12 m4 hide-on-small-only" src="https://i.pinimg.com/originals/c5/d0/ce/c5d0ce1c4556d65ae7b5ca78abb5e93c.png" alt="">
 
-                <div class="Article-Info col m8">
+                <div class="Article-Info col s12 m8 hide-on-small-only">
                         <h1 class="Article-Info-Title">Lorem ipsum dolor sit amet consectetur.</h1>
                         <p class="Article-Info-Text p-color">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores, sint. Similique ad totam nesciunt explicabo nostrum quidem laboriosam, vero dolorum temporibus consequatur delectus illo accusamus tenetur, aut facere nam est.</p>
                         <div class="Article-Info-Social">
